--- a/quizApp/index.html
+++ b/quizApp/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quiz App</title>
+  </head>
+  <link rel="stylesheet" href="./index.css">
+  <body>
+    <div class="quiz-container">
+        <div class="quiz-header">
+      <h2 id="question">Question text</h2>
+      <ul>
+        <li>
+            <input type="radio" id="a" 
+            name="answer"/> 
+            <label for="a" id="a_text">Question</label>
+        </li>
+        <li>
+            <input type="radio" id="b" 
+            name="answer"/> 
+            <label for="b" id="b_text">Question</label>
+        </li>
+        <li>
+            <input type="radio" id="c" 
+            name="answer"/> 
+            <label for="c" id="c_text">Question</label>
+        </li>
+        <li>
+            <input type="radio" id="d" 
+            name="answer"/> 
+            <label for="d" id="d_text">Question</label>
+        </li>
+        
+      </ul>
+    </div>
+      <button id="submit">Submit</button>
+    </div>
+  </body>
 </html>
+<script src="./index.js"></script>
