--- a/quizApp/index.html
+++ b/quizApp/index.html
@@ -8,33 +8,48 @@
   </head>
   <link rel="stylesheet" href="./index.css">
   <body>
-    <div class="quiz-container">
-        <div class="quiz-header">
-      <h2 id="question">Question text</h2>
-      <ul>
-        <li>
-            <input type="radio" id="a" 
-            name="answer"/> 
-            <label for="a" id="a_text">Question</label>
-        </li>
-        <li>
-            <input type="radio" id="b" 
-            name="answer"/> 
-            <label for="b" id="b_text">Question</label>
-        </li>
-        <li>
-            <input type="radio" id="c" 
-            name="answer"/> 
-            <label for="c" id="c_text">Question</label>
-        </li>
-        <li>
-            <input type="radio" id="d" 
-            name="answer"/> 
-            <label for="d" id="d_text">Question</label>
-        </li>
-        
-      </ul>
-    </div>
+    <div class="quiz-container" id="quiz">
+      <div class="quiz-header">
+          <h2 id="question">Question text</h2>
+          <ul>
+              <li>
+                  <input
+                      type="radio"
+                      id="a"
+                      name="answer"
+                      class="answer"
+                  />
+                  <label id="a_text" for="a">Question</label>
+              </li>
+              <li>
+                  <input
+                      type="radio"
+                      id="b"
+                      name="answer"
+                      class="answer"
+                  />
+                  <label id="b_text" for="b">Question</label>
+              </li>
+              <li>
+                  <input
+                      type="radio"
+                      id="c"
+                      name="answer"
+                      class="answer"
+                  />
+                  <label id="c_text" for="c">Question</label>
+              </li>
+              <li>
+                  <input
+                      type="radio"
+                      id="d"
+                      name="answer"
+                      class="answer"
+                  />
+                  <label id="d_text" for="d">Question</label>
+              </li>
+          </ul>
+      </div>
       <button id="submit">Submit</button>
     </div>
   </body>
